# logv

core/: Cargo.toml
core/src/: logs.rs  main.rs
